Resurrect more of Autonomous code, clean up